<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_bus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="doClick"
            android:text="bus" />

        <Button
            android:id="@+id/btn_car"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="doClick"
            android:text="car" />

        <Button
            android:id="@+id/btn_walk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="doClick"
            android:text="walk" />
<!--         <Button
            android:id="@+id/btn_beginNavigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="doClick"
            android:text="Navigation" /> -->
    </LinearLayout>
        
<!--     <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.amap.api.maps.MapView> -->
             
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border" >

        <com.amap.api.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/map_err"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="310dp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingLeft="@dimen/margin_left"
            android:paddingTop="@dimen/margin_top"
            android:text="@string/routeinfo_1"
            android:textColor="@color/black"
            android:textSize="@dimen/route_text_size" />

        <TextView
            android:id="@+id/navi_route_distance_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingLeft="@dimen/margin_left"
            android:paddingTop="@dimen/margin_top"
            android:text="@string/routeinfo_default"
            android:textColor="@color/red"
            android:textSize="@dimen/route_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingTop="@dimen/margin_top"
            android:text="@string/routeinfo_2"
            android:textColor="@color/black"
            android:textSize="@dimen/route_text_size" />

        <TextView
            android:id="@+id/navi_route_time_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingLeft="@dimen/margin_left"
            android:paddingTop="@dimen/margin_top"
            android:text="@string/routeinfo_default"
            android:textColor="@color/red"
            android:textSize="@dimen/route_text_size" />

        <TextView
            android:id="@+id/navi_route_cost_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingTop="@dimen/margin_top"
            android:text="@string/routeinfo_3"
            android:textColor="@color/black"
            android:textSize="@dimen/route_text_size" />

        <TextView
            android:id="@+id/navi_route_cost_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingLeft="@dimen/margin_left"
            android:paddingTop="@dimen/margin_top"
            android:text="@string/routeinfo_default"
            android:textColor="@color/red"
            android:singleLine="true"
            android:textSize="@dimen/route_text_size" />

        <TextView
            android:id="@+id/navi_route_cost_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingTop="@dimen/margin_top"
            android:text="@string/routeinfo_4"
            android:textColor="@color/black"
            android:textSize="@dimen/route_text_size" />
    </LinearLayout>

   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_beginNavigation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/naviroute_navi_height"
            android:layout_alignParentRight="true"
            android:onClick="doClick"
            android:text="@string/start_navi_navi" />


    </RelativeLayout>

</LinearLayout>
